# numszam_toolbox

./: LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
decomp/: __init__.py  cholesky.py  lu.py  qr.py
iterative/: gauss_seidel.py  power.py
linalg/: cholesky.py  lu.py  qr.py
poly/: polynomial.py
reports/: flake8_report.txt  pylint_report.txt  test_coverage.txt
src/numszam_toolbox.egg-info/: requires.txt
src/numszam_toolbox/decomp/: lu.py
src/numszam_toolbox/iterative/: power.py
src/numszam_toolbox/poly/: __init__.py  polynomial.py
src/numszam_toolbox/utils/: matrix_utils.py  plotter.py
src/numszam_toolbox/web/: app.py
src/numszam_toolbox/web/problems/: generators.py
src/numszam_toolbox/web/static/: style.css
src/numszam_toolbox_szte/decomp/: lu.py
src/numszam_toolbox_szte/iterative/: __init__.py  gauss_seidel.py  power.py
src/numszam_toolbox_szte/poly/: polynomial.py
src/numszam_toolbox_szte/utils/: __init__.py  matrix_utils.py
src/numszam_toolbox_szte/web/: app.py
src/numszam_toolbox_szte/web/problems/: generators.py
test/: test_app.py  test_decomp.py  test_iterative.py  test_poly.py  test_problems.py  test_utils.py
test/test_linalg/: test_cholesky.py  test_lu.py
utils/: Plotter.py  matrix_utils.py  plot_vector.py  plotter.py
web/: __init__.py  app.py
web/problems/: generators.py
web/static/: style.css
web/templates/: index.html
