[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numszam_toolbox_szte"
version = "0.1.0"
description = "Egy fuggvenykonyvtar, es egyszeru webapp a Numerikus Szamitasok targyhoz."
readme = "README.md"
authors = [
    { name="Vincze Nándor", email="nvincze@inf.u-szeged.hu" }
]
license = { file = "LICENSE" }
dependencies = [
    "flask",
    "matplotlib",
    "numpy",
    "pytest"
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/bodorcy/numszam_toolbox"

[tool.setuptools.packages.find]
where = ["src"]
